# graphiti-cli

./: .gitignore  AGENTS.md  CLAUDE-GUIDE.md  CLAUDE.md  GUIDE.md  README.md  prd_template_v1.md  pyproject.toml  pytest.ini  test_cli.sh  test_query.py
cli/: __init__.py  graphiti_cli.py
cli/commands/: __init__.py  episodes.py  maintenance.py  query.py  search.py
cli/query/: __init__.py  executor.py  interpreter.py  prompts.py  session.py
cli/utils/: __init__.py  client.py  formatters.py  validators.py
examples/: example_usage.sh  query_examples.md
tests/: test_episodes_cli.py  test_formatters.py  test_search_cli.py  test_validators.py
